# biopytorch

./: .gitignore  LICENSE  README.md  setup.cfg
biopytorch/: __init__.py  bioconv2d.py  biolinear.py  biotrainer.py
dev/: bioconv2d_dev.py
experiments/: 01_bioconv_convergence.py  02_biolayer_cifar10.py  03_bioarchitecture_cifar10.py  README.md  data.py
notebooks/: Example_CIFAR10.ipynb  README.md  Testing.ipynb  plotting.py
notebooks/SavedModels/: layers1.pt  layers2.pt  layers3.pt  layers4.pt
tests/: test_bioconv2d.py
