[metadata]
name = biopytorch
version = 0.0.1
author = Francesco Manzali
author_email = manzali.francesco97@gmail.com
description = PyTorch implementation of Hebbian "Bio-Learning" convolutional layers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Einlar/biopytorch
project_urls =
    BugTracker = https://github.com/Einlar/biopytorch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = biopytorch
install_requires =
    torch>=1.8
    numpy
    tqdm
    matplotlib
    pytorch_lightning
    optuna
    wandb; python_version >= "3.7"